--- a/new4.html
+++ b/new4.html
@@ -11,6 +11,14 @@
 
     </div>
     <div class="login">
+       <table class="login-controls">
+        <tr>
+          <td>Email or Mobile</td>
+          <td>Password</td>
+        </tr>
+        <form action="">
+      </table>
+    </form>
       
     </div>
   </div>
