--- a/new4.html
+++ b/new4.html
@@ -11,12 +11,21 @@
 
     </div>
     <div class="login">
+      <form action="">
        <table class="login-controls">
         <tr>
-          <td>Email or Mobile</td>
-          <td>Password</td>
+          <td><label class="login-label">Email or Mobile</label></td>
+          <td><label class="login-label">Password</label></td>
         </tr>
-        <form action="">
+      <tr>
+          <td><input type="text"></td>
+          <td><input type="text"></td>
+          <td><input type="submit" value="login"></td>
+        </tr>
+        <tr>
+<td></td>
+<td>Forgotten account</td>
+        </tr>
       </table>
     </form>
       
