--- a/new4.html
+++ b/new4.html
@@ -20,11 +20,11 @@
       <tr>
           <td><input type="text"></td>
           <td><input type="text"></td>
-          <td><input type="submit" value="login"></td>
+          <td><input class="submit-btn"><input type="submit" value="login"></td>
         </tr>
         <tr>
 <td></td>
-<td>Forgotten account</td>
+<td><a class='forgotten' href='forgotten.html'Forgotten account</td>
         </tr>
       </table>
     </form>
